# clear-vision

./: .gitignore  README.md  docker-compose.yaml
.vscode.example/: c_cpp_properties.json  launch.json  tasks.json
archive/: README.md  docker-compose.yaml
archive/py-core/: Makefile  README.md  pyproject.toml
archive/py-core/clear_vision/adapters/repositories/: in_memory.py
archive/py-core/clear_vision/entrypoints/api/routers/: inferences.py  videos.py
archive/py-core/clear_vision/infra/: __init__.py
archive/py-core/clear_vision/infra/dynamodb/: connection.py
archive/py-core/clear_vision/interfaces/: frame_samplers.py  models.py
archive/py-core/notebooks/: helpers.py
archive/py-core/tests/adapters/: test_entrypoints.py
archive/ui/: README.md  electron-builder.json  package-lock.json
archive/ui/web/: next.config.ts
archive/ui/web/src/app/: layout.tsx  page.tsx
backend/: Dockerfile  Makefile  README.md  pyproject.toml
backend/clear_vision/adapters/: detectors.py  frame_samplers.py  models.py  repositories.py  strategies.py
backend/clear_vision/adapters/repositories/: dynamodb.py
backend/clear_vision/config/: containers.py
backend/clear_vision/domain/: command.py  dtos.py  entities.py  exceptions.py  services.py  value_objects.py
backend/clear_vision/entrypoints/api/: api_models.py  app.py  main.py
backend/clear_vision/entrypoints/api/routers/: healthcheck.py  inferences.py  videos.py
backend/clear_vision/entrypoints/cli/: app.py
backend/clear_vision/infra/: frame_samplers.py
backend/clear_vision/infra/dynamodb/: helpers.py
backend/clear_vision/infra/interfaces/: frame_samplers.py
backend/clear_vision/interfaces/: detectors.py  frame_samplers.py  models.py  repositories.py  strategies.py
backend/clear_vision/services/: send_message.py
backend/clear_vision/use_cases/: send_message.py
backend/docs/: README.md  openapi.json
backend/notebooks/: QA-Image-Llava-05b.ipynb  QA-Image-Ollama-QwenVL-2b.ipynb  QA-Image-QwenVL-2b.ipynb  QA-Video-Llava-05b.ipynb  QA-Video-SAM3.ipynb  Test-Clear-Vision-Detector.ipynb  Test-Clear-Vision-Services.ipynb  utils.py
backend/tests/: conftest.py  fakes.py
backend/tests/adapters/: test_entrypoints.py  test_frame_samplers.py  test_models.py
backend/tests/adapters/repositories/: test_dynamodb.py
backend/tests/domain/: test_services.py  test_value_objects.py
clear_vision/: .gitignore  electron-builder.json  package-lock.json  package.json  tsconfig.json
clear_vision/client/: package-lock.json  tsconfig.json
clear_vision/client/main/: tsconfig.electron.json
clear_vision/client/renderer/: index.html  tsconfig.app.json
clear_vision/electron/: index.ts
clear_vision/renderer/: next.config.ts  tsconfig.json  vite.config.ts
clear_vision/renderer/src/: App.tsx
clear_vision/renderer/src/app/: layout.tsx
clear_vision/renderer/src/app/(public routes)/: page.tsx
clear_vision/renderer/src/components/: FileUploader.tsx
clear_vision/renderer/src/types/: index.ts
core/: .env.example  CHANGELOG.md  CMakeLists.txt  Dockerfile  MODELS.md  PROFILING.md  README.md  SETUP.md  config.example.json  output.json  search_results.json
core/clear_vision/adapters/repositories/: dynamodb.py
core/clear_vision/config/: logger.py
core/clear_vision/domain/: dtos.py
core/clear_vision/entrypoints/api/: main.py
core/clear_vision/infra/dynamodb/: config.py  helpers.py
core/clear_vision/interfaces/: detectors.py
core/cli/: cli.hpp  cvision_cli.cpp
core/docs/: openapi.json
core/include/: cli.hpp  levenshtein-search.hpp  word2vec-search.hpp  yolo-detector.hpp
core/lib/: cvision.hpp
core/profiling/: profiling-10min-Mat-at.txt  profiling-10min-ptr.txt
core/src/: cvision.cpp  detect.cpp  levenshtein-search.cpp  levenshtein_search.cpp  levenshtein_search.hpp  video-processor.cpp  word2vec-search.cpp  yolo-detector.cpp  yolo_detector.cpp  yolo_detector.hpp  yolo_model.cpp  yolo_model.hpp
core/tests/: conftest.py  fakes.py
core/tests/domain/: test_services.py
detect/: CMakeLists.txt  Makefile  README.md  SETUP.md  config.example.json  download-models.sh  main.cpp  setup.sh  video-processor.cpp  yolo-detector.cpp
detect/.github/workflows/: build.yml
detect/include/: video-processor.hpp  word2vec-search.hpp  yolo-detector.hpp
detect/src/: detect.cpp  video-processor.cpp  word2vec-search.cpp  yolo-detector.cpp
frontend/: .gitignore  Dev.dockerfile  package-lock.json  package.json  tsconfig.json
frontend/docs/: README.md
frontend/electron/: tsconfig.json
frontend/renderer/: next.config.ts
frontend/renderer/src/app/: layout.tsx
frontend/renderer/src/components/: VideoUploader.tsx
frontend/renderer/src/types/: index.ts
frontend/web/: next.config.ts
frontend/web/src/app/: layout.tsx  styles.css
frontend/web/src/app/(app)/: layout.tsx
frontend/web/src/app/(app)/videos/: page.tsx
frontend/web/src/app/(public routes)/: page.tsx
frontend/web/src/app/welcome/: page.tsx
frontend/web/src/components/: VideoUploader.tsx
frontend/web/src/constants/: metadata.ts
frontend/web/src/infra/: env.ts
frontend/web/src/infra/api/inferences/: index.ts
frontend/web/src/infra/api/videos/: index.ts  videosGatewayHttp.ts
gui/: README.md
gui/CVISION-GUI/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/: Makefile  conf.hpp  cvision.hpp  outputs.hpp  test.cpp
playground/: .gitignore  Makefile  batch.cpp  conf.cpp  conf.hpp  conf_parser.cpp  cvision.conf  cvision.cpp  cvision.hpp  main.cpp  processor.h  test  test.cpp  utils.h
protected/client/: package-lock.json  package.json
src/client/: .gitignore  package-lock.json  package.json  tsconfig.app.json  tsconfig.electron.json  tsconfig.electron.tsbuildinfo  tsconfig.json
src/client/main/: index.js  index.js.map
src/client/renderer/: index.html  tsconfig.node.json  vite.config.ts
src/client/renderer/src/: App.tsx
ui/: README.md  package.json
ui/web/src/app/(app)/dashboard/: page.tsx
ui/web/src/components/: VideoUploader.tsx
ui/web/src/types/: index.ts
(+4 files in other folders)
