[project]
name = "clear-vision-backend"
version = "0.1.0"
description = "Clear vision backend"
authors = [
    {name = "Raphael Ramos",email = "raphael.opensource@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch (>=2.9.0,<3.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "accelerate (>=1.11.0,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "fastapi[standard] (>=0.120.0,<0.121.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false